--- a/locale/pl_PL.json
+++ b/locale/pl_PL.json
@@ -18,5 +18,6 @@
   "Join request of user {uname} for this session is not found": "Zapytanie o dołączenie użytkownika {uname} nie zostało znalezione dla tej sesji",
   "Response from server can not be correctly interpreted": "Odpowiedź z serwera nie może być poprawnie zinterpretowana",
   "Event {ename} is not found in a containerof events": "Zdarzenie {ename} nie zostało znalezione w kontenerze zdarzeń",
-  "Bad status code received from server: {scode} ({stext})": "Zły kod statusu otrzymany z serwera: {scode} ({stext})"
+  "Bad status code received from server: {scode} ({stext})": "Zły kod statusu otrzymany z serwera: {scode} ({stext})",
+  "Event {ename} is not found in an event\'s container": "Zdarzenie {ename} nie zostało znalezione w żadnym kontenerze"
 }
